--- a/edge-server.yml
+++ b/edge-server.yml
@@ -2,7 +2,7 @@ server:
   port: 9000
 
 zull:
-  ignored-services: "*"
+  ignoredServices: '*'
   routes:
     composite:
       path: /composite/**
