--- a/turbine.yml
+++ b/turbine.yml
@@ -2,8 +2,10 @@ server:
   port: 8989
 
 management:
-  port: 8999
+  port: -1
 
 turbine:
+  aggregator:
+    clusterConfig: COMPOSITE, EDGE-SERVER
   appConfig: composite, edge-server
-  clusterNameExpression: new String("default")
+#  clusterNameExpression: new String("default")
