turbine.yml turbine 설정 모두 주석처리(turbine-amqp로 변경시작)

--- a/turbine.yml
+++ b/turbine.yml
@@ -4,8 +4,8 @@ server:
 management:
   port: -1
 
-turbine:
-  aggregator:
-    clusterConfig: COMPOSITE, EDGE-SERVER
-  appConfig: composite, edge-server
+#turbine:
+#  aggregator:
+#    clusterConfig: COMPOSITE, EDGE-SERVER
+#  appConfig: composite, edge-server
 #  clusterNameExpression: new String("default")
